# HarmonyOS-mcp-server

./: .env.example  .gitignore  .python-version  LICENSE  README.md  device_test_mcp_actions.jsonl  device_test_mcp_input.jsonl  langgraph_mcp.py  local_deepseek_mcp_client.py  pyproject.toml  run_deepseek_client.sh  run_mcp.sh  run_v5.sh  server.py  server_standalone.py
backend/d6-smart-home/: CHANNEL_API_DOC.md  DEVELOPMENT_LOG.md  INTERFACE_ALIGN_DOC.md  PUSH_API_DOC.md  REMOTE_SECURE_API.md  SMART_HOME_FULL_API.md  TTS_API_DOC.md  adaptive_guard.py  ai_provider_router.py  bounded_http_server.py  channel.py  chart_method.py  check_db.py  cm_b64.txt  context_engine.py  controller_concurrency_patch.py  decode_gw6.py  decode_gw6_v2.py  environment_override.py  gateway_context_runtime.py  gateway_v3.py  gateway_v4.py  gateway_v6.b64  gateway_v6.gz.b64  gateway_v6.py.bak  gateway_v6.py.bak2  gateway_v6.py.before_context_only_tts_20260718  gateway_v6.py.before_guard_timestamps_20260718  gateway_v6.py.before_tts_ack_20260718  gateway_v6.py.before_tts_disable_  gateway_v6.py.before_tts_limit_20260718  gm_crypto.py  gw6_b64.txt  hard_rule_policy.py  hardware_bridge.py  hardware_bridge_compat.py  hostapd_ap.conf  intent_engine.py  mcp_server_enhanced.py  (+37 more)
device-bin/: python3  uv
docs/: 接口对齐文档.md  统计接口文档.md
examples/: deepseek_agents_mcp.py
hdc/: Component.py  __init__.py  app_manager.py  execption.py  harmony_apps.py  hdc.py  media.py  proto.py  system.py  utils.py  weather.py  window_manager.py
smart_home/: channel.py  data_pusher.py  gateway_v5.py  hardware_bridge.py
(+227 files in other folders)
