[project]
name = "harmonyos-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.1.2",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "mcp[cli]>=1.6.0",
    "openai-agents>=0.0.10",
    "pillow>=11.2.1",
]
